@@ -19,36 +19,30 @@ package org.jackhuang.hmcl.game;
 
 import com.google.gson.JsonParseException;
 import kala.compress.archivers.zip.ZipArchiveReader;
-import org.jackhuang.hmcl.Metadata;
 import org.jackhuang.hmcl.mod.*;
 import org.jackhuang.hmcl.mod.curse.CurseModpackProvider;
 import org.jackhuang.hmcl.mod.mcbbs.McbbsModpackManifest;
 import org.jackhuang.hmcl.mod.mcbbs.McbbsModpackProvider;
 import org.jackhuang.hmcl.mod.modrinth.ModrinthModpackProvider;
-import org.jackhuang.hmcl.mod.multimc.MultiMCComponents;
 import org.jackhuang.hmcl.mod.multimc.MultiMCInstanceConfiguration;
 import org.jackhuang.hmcl.mod.multimc.MultiMCModpackProvider;
 import org.jackhuang.hmcl.mod.server.ServerModpackManifest;
 import org.jackhuang.hmcl.mod.server.ServerModpackProvider;
 import org.jackhuang.hmcl.mod.server.ServerModpackRemoteInstallTask;
-import org.jackhuang.hmcl.setting.GameSettings;
-import org.jackhuang.hmcl.setting.GameWindowType;
-import org.jackhuang.hmcl.setting.JavaVersionType;
 import org.jackhuang.hmcl.setting.Profile;
 import org.jackhuang.hmcl.setting.Profiles;
+import org.jackhuang.hmcl.setting.VersionSetting;
 import org.jackhuang.hmcl.task.Schedulers;
 import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.util.Lang;
-import org.jackhuang.hmcl.util.PortablePath;
 import org.jackhuang.hmcl.util.function.ExceptionalConsumer;
 import org.jackhuang.hmcl.util.function.ExceptionalRunnable;
 import org.jackhuang.hmcl.util.gson.JsonUtils;
-import org.jackhuang.hmcl.util.i18n.LocalizedText;
 import org.jackhuang.hmcl.util.io.CompressingUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
-import org.jetbrains.annotations.NotNullByDefault;
 import org.jetbrains.annotations.Nullable;
 
+import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.nio.charset.Charset;
@@ -56,21 +50,15 @@ import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Stream;
 
 import static org.jackhuang.hmcl.util.Lang.mapOf;
 import static org.jackhuang.hmcl.util.Lang.toIterable;
 import static org.jackhuang.hmcl.util.Pair.pair;
 
-/// Utilities for reading, installing, and applying modpack-specific game settings.
-@NotNullByDefault
 public final class ModpackHelper {
-    private ModpackHelper() {
-    }
+    private ModpackHelper() {}
 
     private static final Map<String, ModpackProvider> providers = mapOf(
             pair(CurseModpackProvider.INSTANCE.getName(), CurseModpackProvider.INSTANCE),
@@ -81,16 +69,12 @@ public final class ModpackHelper {
             pair(HMCLModpackProvider.INSTANCE.getName(), HMCLModpackProvider.INSTANCE)
     );
 
-    static {
-        MultiMCComponents.setImplementation(Metadata.FULL_TITLE);
-    }
-
     @Nullable
     public static ModpackProvider getProviderByType(String type) {
         return providers.get(type);
     }
 
-    public static boolean isFileModpackByExtension(Path file) {
+    public static boolean isFileModpackByExtension(File file) {
         String ext = FileUtils.getExtension(file);
         return "zip".equals(ext) || "mrpack".equals(ext);
     }
@@ -148,12 +132,15 @@ public final class ModpackHelper {
                 (path.getFileName() == null || ".minecraft".equals(FileUtils.getName(path)));
     }
 
-    public static ModpackConfiguration<?> readModpackConfiguration(Path file) throws IOException {
-        try {
-            return JsonUtils.fromJsonFile(file, ModpackConfiguration.class);
-        } catch (JsonParseException e) {
-            throw new IOException("Malformed modpack configuration");
-        }
+    public static ModpackConfiguration<?> readModpackConfiguration(File file) throws IOException {
+        if (!file.exists())
+            throw new FileNotFoundException(file.getPath());
+        else
+            try {
+                return JsonUtils.fromJsonFile(file.toPath(), ModpackConfiguration.class);
+            } catch (JsonParseException e) {
+                throw new IOException("Malformed modpack configuration");
+            }
     }
 
     public static Task<?> getInstallTask(Profile profile, ServerModpackManifest manifest, String name, Modpack modpack) {
@@ -162,11 +149,10 @@ public final class ModpackHelper {
         ExceptionalRunnable<?> success = () -> {
             HMCLGameRepository repository = profile.getRepository();
             repository.refreshVersions();
-            GameSettings.Instance setting = repository.getInstanceGameSettingsOrCreate(name);
+            VersionSetting vs = repository.specializeVersionSetting(name);
             repository.undoMark(name);
-            if (setting != null) {
-                setting.getOverrideProperties().add(GameSettings.PROPERTY_RUNNING_DIRECTORY);
-            }
+            if (vs != null)
+                vs.setGameDirType(GameDirectoryType.VERSION_FOLDER);
         };
 
         ExceptionalConsumer<Exception, ?> failure = ex -> {
@@ -178,40 +164,37 @@ public final class ModpackHelper {
 
         return new ServerModpackRemoteInstallTask(profile.getDependency(), manifest, name)
                 .whenComplete(Schedulers.defaultScheduler(), success, failure)
-                .withStagesHints(new Task.StagesHint("hmcl.modpack"), new Task.StagesHint("hmcl.modpack.download", List.of("hmcl.install.assets", "hmcl.install.libraries")));
+                .withStagesHint(Arrays.asList("hmcl.modpack", "hmcl.modpack.download"));
     }
 
     public static boolean isExternalGameNameConflicts(String name) {
         return Files.exists(Paths.get("externalgames").resolve(name));
     }
 
-    public static Task<?> getInstallManuallyCreatedModpackTask(Profile profile, Path zipFile, String name, Charset charset) {
+    public static Task<?> getInstallManuallyCreatedModpackTask(Profile profile, File zipFile, String name, Charset charset) {
         if (isExternalGameNameConflicts(name)) {
             throw new IllegalArgumentException("name existing");
         }
 
-        return new ManuallyCreatedModpackInstallTask(profile, zipFile, charset, name)
+        return new ManuallyCreatedModpackInstallTask(profile, zipFile.toPath(), charset, name)
                 .thenAcceptAsync(Schedulers.javafx(), location -> {
-                    Profile newProfile = new Profile(
-                            Profiles.newProfileId(),
-                            LocalizedText.plain(name),
-                            PortablePath.fromPath(location));
-                    Profiles.addLocalProfile(newProfile);
+                    Profile newProfile = new Profile(name, location.toFile());
+                    newProfile.setUseRelativePath(true);
+                    Profiles.getProfiles().add(newProfile);
                     Profiles.setSelectedProfile(newProfile);
                 });
     }
 
-    public static Task<?> getInstallTask(Profile profile, Path zipFile, String name, Modpack modpack, String iconUrl) {
+    public static Task<?> getInstallTask(Profile profile, File zipFile, String name, Modpack modpack) {
         profile.getRepository().markVersionAsModpack(name);
 
         ExceptionalRunnable<?> success = () -> {
             HMCLGameRepository repository = profile.getRepository();
             repository.refreshVersions();
-            GameSettings.Instance setting = repository.getInstanceGameSettingsOrCreate(name);
+            VersionSetting vs = repository.specializeVersionSetting(name);
             repository.undoMark(name);
-            if (setting != null) {
-                setting.getOverrideProperties().add(GameSettings.PROPERTY_RUNNING_DIRECTORY);
-            }
+            if (vs != null)
+                vs.setGameDirType(GameDirectoryType.VERSION_FOLDER);
         };
 
         ExceptionalConsumer<Exception, ?> failure = ex -> {
@@ -222,150 +205,89 @@ public final class ModpackHelper {
         };
 
         if (modpack.getManifest() instanceof MultiMCInstanceConfiguration)
-            return modpack.getInstallTask(profile.getDependency(), zipFile, name, iconUrl)
+            return modpack.getInstallTask(profile.getDependency(), zipFile, name)
                     .whenComplete(Schedulers.defaultScheduler(), success, failure)
                     .thenComposeAsync(createMultiMCPostInstallTask(profile, (MultiMCInstanceConfiguration) modpack.getManifest(), name))
-                    .withStagesHints(new Task.StagesHint("hmcl.modpack"), new Task.StagesHint("hmcl.modpack.download", List.of("hmcl.install.assets", "hmcl.install.libraries")));
+                    .withStagesHint(List.of("hmcl.modpack", "hmcl.modpack.download"));
         else if (modpack.getManifest() instanceof McbbsModpackManifest)
-            return modpack.getInstallTask(profile.getDependency(), zipFile, name, iconUrl)
+            return modpack.getInstallTask(profile.getDependency(), zipFile, name)
                     .whenComplete(Schedulers.defaultScheduler(), success, failure)
                     .thenComposeAsync(createMcbbsPostInstallTask(profile, (McbbsModpackManifest) modpack.getManifest(), name))
-                    .withStagesHints(new Task.StagesHint("hmcl.modpack"), new Task.StagesHint("hmcl.modpack.download", List.of("hmcl.install.assets", "hmcl.install.libraries")));
+                    .withStagesHint(List.of("hmcl.modpack", "hmcl.modpack.download"));
         else
-            return modpack.getInstallTask(profile.getDependency(), zipFile, name, iconUrl)
+            return modpack.getInstallTask(profile.getDependency(), zipFile, name)
                     .whenComplete(Schedulers.javafx(), success, failure)
-                    .withStagesHints(new Task.StagesHint("hmcl.modpack"), new Task.StagesHint("hmcl.modpack.download", List.of("hmcl.install.assets", "hmcl.install.libraries")));
+                    .withStagesHint(List.of("hmcl.modpack", "hmcl.modpack.download"));
     }
 
     public static Task<Void> getUpdateTask(Profile profile, ServerModpackManifest manifest, Charset charset, String name, ModpackConfiguration<?> configuration) throws UnsupportedModpackException {
         switch (configuration.getType()) {
             case ServerModpackRemoteInstallTask.MODPACK_TYPE:
                 return new ModpackUpdateTask(profile.getRepository(), name, new ServerModpackRemoteInstallTask(profile.getDependency(), manifest, name))
-                        .thenComposeAsync(profile.getRepository().refreshVersionsAsync())
-                        .withStagesHints(new Task.StagesHint("hmcl.modpack"), new Task.StagesHint("hmcl.modpack.download", List.of("hmcl.install.assets", "hmcl.install.libraries")));
+                        .withStagesHint(Arrays.asList("hmcl.modpack", "hmcl.modpack.download"));
             default:
                 throw new UnsupportedModpackException();
         }
     }
 
-    public static Task<?> getUpdateTask(Profile profile, Path zipFile, Charset charset, String name, ModpackConfiguration<?> configuration) throws UnsupportedModpackException, ManuallyCreatedModpackException, MismatchedModpackTypeException {
-        Modpack modpack = ModpackHelper.readModpackManifest(zipFile, charset);
+    public static Task<?> getUpdateTask(Profile profile, File zipFile, Charset charset, String name, ModpackConfiguration<?> configuration) throws UnsupportedModpackException, ManuallyCreatedModpackException, MismatchedModpackTypeException {
+        Modpack modpack = ModpackHelper.readModpackManifest(zipFile.toPath(), charset);
         ModpackProvider provider = getProviderByType(configuration.getType());
         if (provider == null) {
             throw new UnsupportedModpackException();
         }
-        if (modpack.getManifest() instanceof MultiMCInstanceConfiguration)
-            return provider.createUpdateTask(profile.getDependency(), name, zipFile, modpack)
-                    .thenComposeAsync(() -> createMultiMCPostUpdateTask(profile, (MultiMCInstanceConfiguration) modpack.getManifest(), name))
-                    .thenComposeAsync(profile.getRepository().refreshVersionsAsync());
-        else
-            return provider.createUpdateTask(profile.getDependency(), name, zipFile, modpack)
-                    .thenComposeAsync(profile.getRepository().refreshVersionsAsync());
+        return provider.createUpdateTask(profile.getDependency(), name, zipFile, modpack);
     }
 
-    public static void toGameSettings(MultiMCInstanceConfiguration c, GameSettings.Instance setting) {
-        setting.getOverrideProperties().add(GameSettings.PROPERTY_RUNNING_DIRECTORY);
+    public static void toVersionSetting(MultiMCInstanceConfiguration c, VersionSetting vs) {
+        vs.setUsesGlobal(false);
+        vs.setGameDirType(GameDirectoryType.VERSION_FOLDER);
 
         if (c.isOverrideJavaLocation()) {
-            setting.getOverrideProperties().add(GameSettings.PROPERTY_JAVA_TYPE);
-            setting.getOverrideProperties().add(GameSettings.PROPERTY_CUSTOM_JAVA_PATH);
-            setting.javaTypeProperty().setValue(JavaVersionType.CUSTOM);
-            setting.customJavaPathProperty().setValue(Objects.requireNonNullElse(c.getJavaPath(), ""));
+            vs.setJavaDir(Lang.nonNull(c.getJavaPath(), ""));
         }
 
         if (c.isOverrideMemory()) {
-            setting.getOverrideProperties().addAll(List.of(
-                    GameSettings.PROPERTY_AUTO_MEMORY,
-                    GameSettings.PROPERTY_PERM_SIZE,
-                    GameSettings.PROPERTY_MAX_MEMORY,
-                    GameSettings.PROPERTY_MIN_MEMORY
-            ));
-            setting.permSizeProperty().setValue(Optional.ofNullable(c.getPermGen()).map(Object::toString).orElse(""));
+            vs.setPermSize(Optional.ofNullable(c.getPermGen()).map(Object::toString).orElse(""));
             if (c.getMaxMemory() != null)
-                setting.maxMemoryProperty().setValue(c.getMaxMemory());
-            setting.minMemoryProperty().setValue(c.getMinMemory());
+                vs.setMaxMemory(c.getMaxMemory());
+            vs.setMinMemory(c.getMinMemory());
         }
 
         if (c.isOverrideCommands()) {
-            setting.getOverrideProperties().addAll(List.of(
-                    GameSettings.PROPERTY_COMMAND_WRAPPER,
-                    GameSettings.PROPERTY_PRE_LAUNCH_COMMAND
-            ));
-            setting.commandWrapperProperty().setValue(Objects.requireNonNullElse(c.getWrapperCommand(), ""));
-            setting.preLaunchCommandProperty().setValue(Objects.requireNonNullElse(c.getPreLaunchCommand(), ""));
+            vs.setWrapper(Lang.nonNull(c.getWrapperCommand(), ""));
+            vs.setPreLaunchCommand(Lang.nonNull(c.getPreLaunchCommand(), ""));
         }
 
         if (c.isOverrideJavaArgs()) {
-            setting.getOverrideProperties().add(GameSettings.PROPERTY_JVM_OPTIONS);
-            setting.jvmOptionsProperty().setValue(Objects.requireNonNullElse(c.getJvmArgs(), ""));
+            vs.setJavaArgs(Lang.nonNull(c.getJvmArgs(), ""));
         }
 
         if (c.isOverrideConsole()) {
-            setting.getOverrideProperties().add(GameSettings.PROPERTY_SHOW_LOGS);
-            setting.showLogsProperty().setValue(c.isShowConsole());
+            vs.setShowLogs(c.isShowConsole());
         }
 
         if (c.isOverrideWindow()) {
-            setting.getOverrideProperties().addAll(List.of(
-                    GameSettings.PROPERTY_WINDOW_TYPE,
-                    GameSettings.PROPERTY_WIDTH,
-                    GameSettings.PROPERTY_HEIGHT
-            ));
-            setting.windowTypeProperty().setValue(c.isFullscreen() ? GameWindowType.FULLSCREEN : GameWindowType.WINDOWED);
+            vs.setFullscreen(c.isFullscreen());
             if (c.getWidth() != null)
-                setting.widthProperty().setValue(c.getWidth().doubleValue());
+                vs.setWidth(c.getWidth());
             if (c.getHeight() != null)
-                setting.heightProperty().setValue(c.getHeight().doubleValue());
+                vs.setHeight(c.getHeight());
         }
-    }
-
-    private static void applyCommandAndJvmSettings(MultiMCInstanceConfiguration c, GameSettings.Instance setting) {
-        if (c.isOverrideCommands()) {
-            setting.getOverrideProperties().addAll(List.of(
-                    GameSettings.PROPERTY_COMMAND_WRAPPER,
-                    GameSettings.PROPERTY_PRE_LAUNCH_COMMAND
-            ));
-            setting.commandWrapperProperty().setValue(Lang.nonNull(c.getWrapperCommand(), ""));
-            setting.preLaunchCommandProperty().setValue(Lang.nonNull(c.getPreLaunchCommand(), ""));
-        }
-
-        if (c.isOverrideJavaArgs()) {
-            setting.getOverrideProperties().add(GameSettings.PROPERTY_JVM_OPTIONS);
-            setting.jvmOptionsProperty().setValue(Lang.nonNull(c.getJvmArgs(), ""));
-        }
-    }
-
-    private static Task<Void> createMultiMCPostUpdateTask(Profile profile, MultiMCInstanceConfiguration manifest, String version) {
-        return Task.runAsync(Schedulers.javafx(), () -> {
-            GameSettings.Instance setting = Objects.requireNonNull(profile.getRepository().getInstanceGameSettingsOrCreate(version));
-            ModpackHelper.applyCommandAndJvmSettings(manifest, setting);
-        });
     }
 
     private static Task<Void> createMultiMCPostInstallTask(Profile profile, MultiMCInstanceConfiguration manifest, String version) {
         return Task.runAsync(Schedulers.javafx(), () -> {
-            GameSettings.Instance setting = Objects.requireNonNull(profile.getRepository().getInstanceGameSettingsOrCreate(version));
-            ModpackHelper.toGameSettings(manifest, setting);
+            VersionSetting vs = Objects.requireNonNull(profile.getRepository().specializeVersionSetting(version));
+            ModpackHelper.toVersionSetting(manifest, vs);
         });
     }
 
     private static Task<Void> createMcbbsPostInstallTask(Profile profile, McbbsModpackManifest manifest, String version) {
         return Task.runAsync(Schedulers.javafx(), () -> {
-            HMCLGameRepository repository = profile.getRepository();
-            GameSettings.Effective effective = repository.getEffectiveGameSettings(version);
-            if (manifest.getLaunchInfo().getMinMemory() > effective.getMaxMemory()) {
-                GameSettings.Instance setting = Objects.requireNonNull(repository.getInstanceGameSettingsOrCreate(version));
-                setting.getOverrideProperties().addAll(List.of(
-                        GameSettings.PROPERTY_AUTO_MEMORY,
-                        GameSettings.PROPERTY_MIN_MEMORY,
-                        GameSettings.PROPERTY_MAX_MEMORY,
-                        GameSettings.PROPERTY_PERM_SIZE
-                ));
-                setting.autoMemoryProperty().setValue(effective.get(GameSettings::autoMemoryProperty));
-                setting.minMemoryProperty().setValue(effective.get(GameSettings::minMemoryProperty));
-                setting.maxMemoryProperty().setValue(manifest.getLaunchInfo().getMinMemory());
-                setting.permSizeProperty().setValue(effective.get(GameSettings::permSizeProperty));
-            }
+            VersionSetting vs = Objects.requireNonNull(profile.getRepository().specializeVersionSetting(version));
+            if (manifest.getLaunchInfo().getMinMemory() > vs.getMaxMemory())
+                vs.setMaxMemory(manifest.getLaunchInfo().getMinMemory());
         });
     }
 }
