@@ -18,24 +18,24 @@
 package org.jackhuang.hmcl.ui.versions;
 
 import com.jfoenix.controls.*;
+import com.jfoenix.controls.datamodels.treetable.RecursiveTreeObject;
 import javafx.animation.PauseTransition;
-import javafx.application.Platform;
 import javafx.beans.binding.Bindings;
 import javafx.beans.property.BooleanProperty;
-import javafx.beans.property.ObjectProperty;
 import javafx.collections.ListChangeListener;
-import javafx.css.PseudoClass;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
-import javafx.scene.control.*;
+import javafx.scene.control.Label;
+import javafx.scene.control.SelectionMode;
+import javafx.scene.control.SkinBase;
 import javafx.scene.image.Image;
+import javafx.scene.image.ImageView;
 import javafx.scene.input.KeyCode;
 import javafx.scene.input.KeyEvent;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.Priority;
 import javafx.scene.layout.StackPane;
-import javafx.stage.Stage;
 import javafx.util.Duration;
 import org.jackhuang.hmcl.mod.LocalModFile;
 import org.jackhuang.hmcl.mod.ModLoaderType;
@@ -43,9 +43,8 @@ import org.jackhuang.hmcl.mod.RemoteMod;
 import org.jackhuang.hmcl.mod.RemoteModRepository;
 import org.jackhuang.hmcl.mod.curse.CurseForgeRemoteModRepository;
 import org.jackhuang.hmcl.mod.modrinth.ModrinthRemoteModRepository;
-import org.jackhuang.hmcl.setting.DownloadProviders;
 import org.jackhuang.hmcl.setting.Profile;
-import org.jackhuang.hmcl.setting.VersionIconType;
+import org.jackhuang.hmcl.setting.Theme;
 import org.jackhuang.hmcl.task.Schedulers;
 import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.ui.Controllers;
@@ -54,7 +53,7 @@ import org.jackhuang.hmcl.ui.SVG;
 import org.jackhuang.hmcl.ui.animation.ContainerAnimations;
 import org.jackhuang.hmcl.ui.animation.TransitionPane;
 import org.jackhuang.hmcl.ui.construct.*;
-import org.jackhuang.hmcl.util.FXThread;
+import org.jackhuang.hmcl.util.Holder;
 import org.jackhuang.hmcl.util.Lazy;
 import org.jackhuang.hmcl.util.Pair;
 import org.jackhuang.hmcl.util.StringUtils;
@@ -62,26 +61,27 @@ import org.jackhuang.hmcl.util.i18n.I18n;
 import org.jackhuang.hmcl.util.io.CompressingUtils;
 import org.jackhuang.hmcl.util.io.FileUtils;
 import org.jackhuang.hmcl.util.io.NetworkUtils;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
-import java.lang.ref.SoftReference;
-import java.lang.ref.WeakReference;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
-import java.util.concurrent.CompletableFuture;
 import java.util.function.Predicate;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import static org.jackhuang.hmcl.ui.FXUtils.ignoreEvent;
 import static org.jackhuang.hmcl.ui.FXUtils.onEscPressed;
 import static org.jackhuang.hmcl.ui.ToolbarListPageSkin.createToolbarButton2;
 import static org.jackhuang.hmcl.util.Lang.mapOf;
 import static org.jackhuang.hmcl.util.Pair.pair;
+import static org.jackhuang.hmcl.util.StringUtils.isNotBlank;
 import static org.jackhuang.hmcl.util.i18n.I18n.i18n;
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
-final class ModListPageSkin extends SkinBase<ModListPage> {
+class ModListPageSkin extends SkinBase<ModListPage> {
 
     private final TransitionPane toolbarPane;
     private final HBox searchBar;
@@ -91,7 +91,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
     private final JFXListView<ModInfoObject> listView;
     private final JFXTextField searchField;
 
-    @FXThread
+    // FXThread
     private boolean isSearching = false;
 
     ModListPageSkin(ModListPage skinnable) {
@@ -104,7 +104,6 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
         ComponentList root = new ComponentList();
         root.getStyleClass().add("no-padding");
         listView = new JFXListView<>();
-        listView.getStyleClass().add("no-horizontal-scrollbar");
 
         {
             toolbarPane = new TransitionPane();
@@ -143,33 +142,15 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
             toolbarNormal.getChildren().setAll(
                     createToolbarButton2(i18n("button.refresh"), SVG.REFRESH, skinnable::refresh),
                     createToolbarButton2(i18n("mods.add"), SVG.ADD, skinnable::add),
-                    createToolbarButton2(i18n("button.reveal_dir"), SVG.FOLDER_OPEN, skinnable::openModFolder),
-                    createToolbarButton2(i18n("mods.check_updates.button"), SVG.UPDATE, () ->
-                            skinnable.checkUpdates(
-                                    listView.getItems().stream()
-                                            .map(ModInfoObject::getModInfo)
-                                            .toList()
-                            )
-                    ),
+                    createToolbarButton2(i18n("folder.mod"), SVG.FOLDER_OPEN, skinnable::openModFolder),
+                    createToolbarButton2(i18n("mods.check_updates"), SVG.UPDATE, skinnable::checkUpdates),
                     createToolbarButton2(i18n("download"), SVG.DOWNLOAD, skinnable::download),
                     createToolbarButton2(i18n("search"), SVG.SEARCH, () -> changeToolbar(searchBar))
             );
 
             // Toolbar Selecting
-
-            // reason for not using selectAll() is that selectAll() first clears all selected then selects all, causing the toolbar to flicker
-            var selectAll = createToolbarButton2(i18n("button.select_all"), SVG.SELECT_ALL, () -> listView.getSelectionModel().selectRange(0, listView.getItems().size()));
-
-            ListChangeListener<Object> listener = change -> {
-                selectAll.setDisable(!listView.getItems().isEmpty()
-                        && listView.getSelectionModel().getSelectedItems().size() == listView.getItems().size());
-            };
-
-            listView.getSelectionModel().getSelectedItems().addListener(listener);
-            listView.getItems().addListener(listener);
-
             toolbarSelecting.getChildren().setAll(
-                    createToolbarButton2(i18n("button.remove"), SVG.DELETE_FOREVER, () -> {
+                    createToolbarButton2(i18n("button.remove"), SVG.DELETE, () -> {
                         Controllers.confirm(i18n("button.remove.confirm"), i18n("button.remove"), () -> {
                             skinnable.removeSelected(listView.getSelectionModel().getSelectedItems());
                         }, null);
@@ -178,14 +159,8 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                             skinnable.enableSelected(listView.getSelectionModel().getSelectedItems())),
                     createToolbarButton2(i18n("mods.disable"), SVG.CLOSE, () ->
                             skinnable.disableSelected(listView.getSelectionModel().getSelectedItems())),
-                    createToolbarButton2(i18n("mods.check_updates.button"), SVG.UPDATE, () ->
-                            skinnable.checkUpdates(
-                                    listView.getSelectionModel().getSelectedItems().stream()
-                                            .map(ModInfoObject::getModInfo)
-                                            .toList()
-                            )
-                    ),
-                    selectAll,
+                    createToolbarButton2(i18n("button.select_all"), SVG.SELECT_ALL, () ->
+                            listView.getSelectionModel().selectAll()),
                     createToolbarButton2(i18n("button.cancel"), SVG.CANCEL, () ->
                             listView.getSelectionModel().clearSelection())
             );
@@ -197,9 +172,6 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                         else
                             changeToolbar(toolbarSelecting);
                     });
-
-            FXUtils.setOverflowHidden(toolbarPane, 8);
-
             root.getContent().add(toolbarPane);
 
             // Clear selection when pressing ESC
@@ -216,9 +188,11 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
         {
             SpinnerPane center = new SpinnerPane();
             ComponentList.setVgrow(center, Priority.ALWAYS);
+            center.getStyleClass().add("large-spinner-pane");
             center.loadingProperty().bind(skinnable.loadingProperty());
 
-            listView.setCellFactory(x -> new ModInfoListCell(listView));
+            Holder<Object> lastCell = new Holder<>();
+            listView.setCellFactory(x -> new ModInfoListCell(listView, lastCell));
             listView.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
             Bindings.bindContent(listView.getItems(), skinnable.getItems());
             skinnable.getItems().addListener((ListChangeListener<? super ModInfoObject>) c -> {
@@ -259,7 +233,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
         if (newToolbar != oldToolbar) {
             toolbarPane.setContent(newToolbar, ContainerAnimations.FADE);
             if (newToolbar == searchBar) {
-                Platform.runLater(searchField::requestFocus);
+                searchField.requestFocus();
             }
         }
     }
@@ -276,11 +250,17 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
             listView.getItems().clear();
 
             Predicate<@Nullable String> predicate;
-            try {
-                predicate = StringUtils.compileQuery(queryString);
-            } catch (Throwable e) {
-                LOG.warning("Illegal regular expression", e);
-                return;
+            if (queryString.startsWith("regex:")) {
+                try {
+                    Pattern pattern = Pattern.compile(queryString.substring("regex:".length()));
+                    predicate = s -> s != null && pattern.matcher(s).find();
+                } catch (Throwable e) {
+                    LOG.warning("Illegal regular expression", e);
+                    return;
+                }
+            } else {
+                String lowerQueryString = queryString.toLowerCase(Locale.ROOT);
+                predicate = s -> s != null && s.toLowerCase(Locale.ROOT).contains(lowerQueryString);
             }
 
             // Do we need to search in the background thread?
@@ -292,179 +272,142 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                         || predicate.test(modInfo.getGameVersion())
                         || predicate.test(modInfo.getId())
                         || predicate.test(Objects.toString(modInfo.getModLoaderType()))
-                        || predicate.test((item.getModTranslations() != null ? item.getModTranslations().getDisplayName() : null))) {
+                        || predicate.test((item.getMod() != null ? item.getMod().getDisplayName() : null))) {
                     listView.getItems().add(item);
                 }
             }
         }
     }
 
-    static final class ModInfoObject {
+    static class ModInfoObject extends RecursiveTreeObject<ModInfoObject> implements Comparable<ModInfoObject> {
         private final BooleanProperty active;
         private final LocalModFile localModFile;
-        private final @Nullable ModTranslations.Mod modTranslations;
-
-        private SoftReference<CompletableFuture<Image>> iconCache;
+        private final String title;
+        private final String message;
+        private final ModTranslations.Mod mod;
 
         ModInfoObject(LocalModFile localModFile) {
             this.localModFile = localModFile;
             this.active = localModFile.activeProperty();
 
-            this.modTranslations = ModTranslations.MOD.getMod(localModFile.getId(), localModFile.getName());
+            StringBuilder title = new StringBuilder(localModFile.getName());
+            if (isNotBlank(localModFile.getVersion()))
+                title.append(" ").append(localModFile.getVersion());
+            this.title = title.toString();
+
+            StringBuilder message = new StringBuilder(localModFile.getFileName());
+            if (isNotBlank(localModFile.getGameVersion()))
+                message.append(", ").append(i18n("mods.game.version")).append(": ").append(localModFile.getGameVersion());
+            if (isNotBlank(localModFile.getAuthors()))
+                message.append(", ").append(i18n("archive.author")).append(": ").append(localModFile.getAuthors());
+            this.message = message.toString();
+
+            this.mod = ModTranslations.MOD.getModById(localModFile.getId());
+        }
+
+        String getTitle() {
+            return title;
+        }
+
+        String getSubtitle() {
+            return message;
         }
 
         LocalModFile getModInfo() {
             return localModFile;
         }
 
-        public @Nullable ModTranslations.Mod getModTranslations() {
-            return modTranslations;
+        public ModTranslations.Mod getMod() {
+            return mod;
         }
 
-        @FXThread
-        private Image loadIcon() {
-            List<String> iconPaths = new ArrayList<>();
-
-            if (StringUtils.isNotBlank(this.localModFile.getLogoPath())) {
-                iconPaths.add(this.localModFile.getLogoPath());
-            }
-
-            iconPaths.addAll(List.of(
-                    "icon.png",
-                    "logo.png",
-                    "mod_logo.png",
-                    "pack.png",
-                    "logoFile.png",
-                    "assets/icon.png",
-                    "assets/logo.png",
-                    "assets/mod_icon.png",
-                    "assets/mod_logo.png",
-                    "META-INF/icon.png",
-                    "META-INF/logo.png",
-                    "META-INF/mod_icon.png",
-                    "textures/icon.png",
-                    "textures/logo.png",
-                    "textures/mod_icon.png",
-                    "resources/icon.png",
-                    "resources/logo.png",
-                    "resources/mod_icon.png"
-            ));
-
-            String modId = this.localModFile.getId();
-            if (StringUtils.isNotBlank(modId)) {
-                iconPaths.addAll(List.of(
-                        "assets/" + modId + "/icon.png",
-                        "assets/" + modId + "/logo.png",
-                        "assets/" + modId.replace("-", "") + "/icon.png",
-                        "assets/" + modId.replace("-", "") + "/logo.png",
-                        modId + ".png",
-                        modId + "-logo.png",
-                        modId + "-icon.png",
-                        modId + "_logo.png",
-                        modId + "_icon.png",
-                        "textures/" + modId + "/icon.png",
-                        "textures/" + modId + "/logo.png",
-                        "resources/" + modId + "/icon.png",
-                        "resources/" + modId + "/logo.png"
-                ));
-            }
-
-            try (FileSystem fs = CompressingUtils.createReadOnlyZipFileSystem(this.localModFile.getFile())) {
-                for (String path : iconPaths) {
-                    Path iconPath = fs.getPath(path);
-                    if (Files.exists(iconPath)) {
-                        Image image = FXUtils.loadImage(iconPath, 80, 80, true, true);
-                        if (!image.isError() && image.getWidth() > 0 && image.getHeight() > 0 &&
-                                Math.abs(image.getWidth() - image.getHeight()) < 1) {
-                            return image;
-                        }
-                    }
-                }
-            } catch (Exception e) {
-                LOG.warning("Failed to load mod icons", e);
-            }
-
-            return VersionIconType.getIconType(this.localModFile.getModLoaderType()).getIcon();
-        }
-
-        public void loadIcon(ImageContainer imageContainer, @Nullable WeakReference<ObjectProperty<ModInfoObject>> current) {
-            SoftReference<CompletableFuture<Image>> iconCache = this.iconCache;
-            CompletableFuture<Image> imageFuture;
-            if (iconCache != null && (imageFuture = iconCache.get()) != null) {
-                Image image = imageFuture.getNow(null);
-                if (image != null) {
-                    imageContainer.setImage(image);
-                    return;
-                }
-            } else {
-                imageFuture = CompletableFuture.supplyAsync(this::loadIcon, Schedulers.io());
-                this.iconCache = new SoftReference<>(imageFuture);
-            }
-            imageContainer.setImage(VersionIconType.getIconType(localModFile.getModLoaderType()).getIcon());
-            imageFuture.thenAcceptAsync(image -> {
-                if (current != null) {
-                    ObjectProperty<ModInfoObject> infoObjectProperty = current.get();
-                    if (infoObjectProperty == null || infoObjectProperty.get() != this) {
-                        // The current ListCell has already switched to another object
-                        return;
-                    }
-                }
-
-                imageContainer.setImage(image);
-            }, Schedulers.javafx());
+        @Override
+        public int compareTo(@NotNull ModListPageSkin.ModInfoObject o) {
+            return localModFile.getFileName().toLowerCase().compareTo(o.localModFile.getFileName().toLowerCase());
         }
     }
 
-    final class ModInfoDialog extends JFXDialogLayout {
+    class ModInfoDialog extends JFXDialogLayout {
+        {
+            setStyle("-fx-background-color: #0A0A0F;");
+        }
 
         ModInfoDialog(ModInfoObject modInfo) {
             HBox titleContainer = new HBox();
             titleContainer.setSpacing(8);
 
-            Stage stage = Controllers.getStage();
-            maxWidthProperty().bind(stage.widthProperty().multiply(0.7));
+            ImageView imageView = new ImageView();
+            Task.supplyAsync(() -> {
+                try (FileSystem fs = CompressingUtils.createReadOnlyZipFileSystem(modInfo.getModInfo().getFile())) {
+                    String logoPath = modInfo.getModInfo().getLogoPath();
+                    if (StringUtils.isNotBlank(logoPath)) {
+                        Path iconPath = fs.getPath(logoPath);
+                        if (Files.exists(iconPath)) {
+                            try {
+                                Image image = FXUtils.loadImage(iconPath, 40, 40, true, true);
+                                if (!image.isError() && image.getWidth() == image.getHeight())
+                                    return image;
+                            } catch (Throwable e) {
+                                LOG.warning("Failed to load image " + logoPath, e);
+                            }
+                        }
+                    }
 
-            var imageContainer = new ImageContainer(40);
-            modInfo.loadIcon(imageContainer, null);
+                    List<String> defaultPaths = new ArrayList<>(Arrays.asList(
+                            "icon.png",
+                            "logo.png",
+                            "mod_logo.png",
+                            "pack.png",
+                            "logoFile.png"
+                    ));
+
+                    String id = modInfo.getModInfo().getId();
+                    if (StringUtils.isNotBlank(id)) {
+                        defaultPaths.addAll(Arrays.asList(
+                                "assets/" + id + "/icon.png",
+                                "assets/" + id.replace("-", "") + "/icon.png",
+                                id + ".png",
+                                id + "-logo.png",
+                                id + "-icon.png",
+                                id + "_logo.png",
+                                id + "_icon.png"
+                        ));
+                    }
+
+                    for (String path : defaultPaths) {
+                        Path iconPath = fs.getPath(path);
+                        if (Files.exists(iconPath)) {
+                            Image image = FXUtils.loadImage(iconPath, 40, 40, true, true);
+                            if (!image.isError() && image.getWidth() == image.getHeight())
+                                return image;
+                        }
+                    }
+                } catch (Exception e) {
+                    LOG.warning("Failed to load icon", e);
+                }
+
+                return null;
+            }).whenComplete(Schedulers.javafx(), (image, exception) -> {
+                if (image != null) {
+                    imageView.setImage(image);
+                } else {
+                    imageView.setImage(FXUtils.newBuiltinImage("/assets/img/command.png", 40, 40, true, true));
+                }
+            }).start();
 
             TwoLineListItem title = new TwoLineListItem();
-            if (modInfo.getModTranslations() != null && I18n.isUseChinese())
-                title.setTitle(modInfo.getModTranslations().getDisplayName());
-            else
-                title.setTitle(modInfo.getModInfo().getName());
-
-            StringJoiner subtitle = new StringJoiner(" | ");
-            subtitle.add(FileUtils.getName(modInfo.getModInfo().getFile()));
-            if (StringUtils.isNotBlank(modInfo.getModInfo().getGameVersion())) {
-                subtitle.add(modInfo.getModInfo().getGameVersion());
-            }
+            title.setTitle(modInfo.getModInfo().getName());
             if (StringUtils.isNotBlank(modInfo.getModInfo().getVersion())) {
-                subtitle.add(modInfo.getModInfo().getVersion());
+                title.getTags().setAll(modInfo.getModInfo().getVersion());
             }
-            if (StringUtils.isNotBlank(modInfo.getModInfo().getAuthors())) {
-                subtitle.add(i18n("archive.author") + ": " + modInfo.getModInfo().getAuthors());
-            }
-            title.setSubtitle(subtitle.toString());
+            title.setSubtitle(FileUtils.getName(modInfo.getModInfo().getFile()));
 
-            titleContainer.getChildren().setAll(imageContainer, title);
+            titleContainer.getChildren().setAll(FXUtils.limitingSize(imageView, 40, 40), title);
             setHeading(titleContainer);
 
             Label description = new Label(modInfo.getModInfo().getDescription().toString());
-            description.setWrapText(true);
             FXUtils.copyOnDoubleClick(description);
-
-            ScrollPane descriptionPane = new ScrollPane(description);
-            FXUtils.smoothScrolling(descriptionPane);
-            descriptionPane.setHbarPolicy(ScrollPane.ScrollBarPolicy.NEVER);
-            descriptionPane.setVbarPolicy(ScrollPane.ScrollBarPolicy.AS_NEEDED);
-            descriptionPane.setFitToWidth(true);
-            description.heightProperty().addListener((obs, oldVal, newVal) -> {
-                double maxHeight = stage.getHeight() * 0.5;
-                double targetHeight = Math.min(newVal.doubleValue(), maxHeight);
-                descriptionPane.setPrefViewportHeight(targetHeight);
-            });
-
-            setBody(descriptionPane);
+            setBody(description);
 
             if (StringUtils.isNotBlank(modInfo.getModInfo().getId())) {
                 for (Pair<String, ? extends RemoteModRepository> item : Arrays.asList(
@@ -474,27 +417,37 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                     RemoteModRepository repository = item.getValue();
                     JFXHyperlink button = new JFXHyperlink(i18n(item.getKey()));
                     Task.runAsync(() -> {
-                        Optional<RemoteMod.Version> versionOptional = repository.getRemoteVersionByLocalFile(modInfo.getModInfo().getFile());
+                        Optional<RemoteMod.Version> versionOptional = repository.getRemoteVersionByLocalFile(modInfo.getModInfo(), modInfo.getModInfo().getFile());
                         if (versionOptional.isPresent()) {
-                            RemoteMod remoteMod = repository.getModById(DownloadProviders.getDownloadProvider(), versionOptional.get().getModid());
+                            RemoteMod remoteMod = repository.getModById(versionOptional.get().getModid());
                             FXUtils.runInFX(() -> {
                                 for (ModLoaderType modLoaderType : versionOptional.get().getLoaders()) {
-                                    String loaderName = switch (modLoaderType) {
-                                        case FORGE -> i18n("install.installer.forge");
-                                        case CLEANROOM -> i18n("install.installer.cleanroom");
-                                        case LEGACY_FABRIC -> i18n("install.installer.legacyfabric");
-                                        case NEO_FORGE -> i18n("install.installer.neoforge");
-                                        case FABRIC -> i18n("install.installer.fabric");
-                                        case LITE_LOADER -> i18n("install.installer.liteloader");
-                                        case QUILT -> i18n("install.installer.quilt");
-                                        default -> null;
-                                    };
-                                    if (loaderName == null)
-                                        continue;
-                                    if (title.getTags()
-                                            .stream()
-                                            .noneMatch(it -> it.getText().equals(loaderName))) {
-                                        title.addTag(loaderName);
+                                    String loaderName;
+                                    switch (modLoaderType) {
+                                        case FORGE:
+                                            loaderName = i18n("install.installer.forge");
+                                            break;
+                                        case CLEANROOM:
+                                            loaderName = i18n("install.installer.cleanroom");
+                                            break;
+                                        case NEO_FORGED:
+                                            loaderName = i18n("install.installer.neoforge");
+                                            break;
+                                        case FABRIC:
+                                            loaderName = i18n("install.installer.fabric");
+                                            break;
+                                        case LITE_LOADER:
+                                            loaderName = i18n("install.installer.liteloader");
+                                            break;
+                                        case QUILT:
+                                            loaderName = i18n("install.installer.quilt");
+                                            break;
+                                        default:
+                                            continue;
+                                    }
+                                    List<String> tags = title.getTags();
+                                    if (!tags.contains(loaderName)) {
+                                        tags.add(loaderName);
                                     }
                                 }
 
@@ -503,8 +456,8 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                                     Controllers.navigate(new DownloadPage(
                                             repository instanceof CurseForgeRemoteModRepository ? HMCLLocalizedDownloadListPage.ofCurseForgeMod(null, false) : HMCLLocalizedDownloadListPage.ofModrinthMod(null, false),
                                             remoteMod,
-                                            new Profile.ProfileVersion(ModListPageSkin.this.getSkinnable().getProfile(), ModListPageSkin.this.getSkinnable().getInstanceId()),
-                                            org.jackhuang.hmcl.ui.download.DownloadPage.FOR_MOD
+                                            new Profile.ProfileVersion(ModListPageSkin.this.getSkinnable().getProfile(), ModListPageSkin.this.getSkinnable().getVersionId()),
+                                            (profile, version, file) -> org.jackhuang.hmcl.ui.download.DownloadPage.download(profile, version, file, "mods")
                                     ));
                                 });
                                 button.setDisable(false);
@@ -526,7 +479,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                 getActions().add(officialPageButton);
             }
 
-            if (modInfo.getModTranslations() == null || StringUtils.isBlank(modInfo.getModTranslations().getMcmod())) {
+            if (modInfo.getMod() == null || StringUtils.isBlank(modInfo.getMod().getMcmod())) {
                 JFXHyperlink searchButton = new JFXHyperlink(i18n("mods.mcmod.search"));
                 searchButton.setOnAction(e -> {
                     fireEvent(new DialogCloseEvent());
@@ -541,7 +494,7 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
                 JFXHyperlink mcmodButton = new JFXHyperlink(i18n("mods.mcmod.page"));
                 mcmodButton.setOnAction(e -> {
                     fireEvent(new DialogCloseEvent());
-                    FXUtils.openLink(ModTranslations.MOD.getMcmodUrl(modInfo.getModTranslations()));
+                    FXUtils.openLink(ModTranslations.MOD.getMcmodUrl(modInfo.getMod()));
                 });
                 getActions().add(mcmodButton);
             }
@@ -560,22 +513,15 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
     private static final Lazy<JFXPopup> popup = new Lazy<>(() -> new JFXPopup(menu.get()));
 
     final class ModInfoListCell extends MDListCell<ModInfoObject> {
-        private static final PseudoClass WARNING = PseudoClass.getPseudoClass("warning");
-
         JFXCheckBox checkBox = new JFXCheckBox();
-        ImageContainer imageContainer = new ImageContainer(24);
         TwoLineListItem content = new TwoLineListItem();
-        JFXButton restoreButton = FXUtils.newToggleButton4(SVG.RESTORE);
-        JFXButton infoButton = FXUtils.newToggleButton4(SVG.INFO);
-        JFXButton revealButton = FXUtils.newToggleButton4(SVG.FOLDER);
+        JFXButton restoreButton = new JFXButton();
+        JFXButton infoButton = new JFXButton();
+        JFXButton revealButton = new JFXButton();
         BooleanProperty booleanProperty;
 
-        Tooltip warningTooltip;
-
-        ModInfoListCell(JFXListView<ModInfoObject> listView) {
-            super(listView);
-
-            this.getStyleClass().add("mod-info-list-cell");
+        ModInfoListCell(JFXListView<ModInfoObject> listView, Holder<Object> lastCell) {
+            super(listView, lastCell);
 
             HBox container = new HBox(8);
             container.setPickOnBounds(false);
@@ -584,11 +530,18 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
             content.setMouseTransparent(true);
             setSelectable();
 
-            imageContainer.setImage(VersionIconType.COMMAND.getIcon());
+            restoreButton.getStyleClass().add("toggle-icon4");
+            restoreButton.setGraphic(FXUtils.limitingSize(SVG.RESTORE.createIcon(Theme.blackFill(), 24), 24, 24));
 
             FXUtils.installFastTooltip(restoreButton, i18n("mods.restore"));
 
-            container.getChildren().setAll(checkBox, imageContainer, content, restoreButton, revealButton, infoButton);
+            revealButton.getStyleClass().add("toggle-icon4");
+            revealButton.setGraphic(FXUtils.limitingSize(SVG.FOLDER.createIcon(Theme.blackFill(), 24), 24, 24));
+
+            infoButton.getStyleClass().add("toggle-icon4");
+            infoButton.setGraphic(FXUtils.limitingSize(SVG.INFO.createIcon(Theme.blackFill(), 24), 24, 24));
+
+            container.getChildren().setAll(checkBox, content, restoreButton, revealButton, infoButton);
 
             StackPane.setMargin(container, new Insets(8));
             getContainer().getChildren().setAll(container);
@@ -596,102 +549,50 @@ final class ModListPageSkin extends SkinBase<ModListPage> {
 
         @Override
         protected void updateControl(ModInfoObject dataItem, boolean empty) {
-            pseudoClassStateChanged(WARNING, false);
-            if (warningTooltip != null) {
-                Tooltip.uninstall(this, warningTooltip);
-                warningTooltip = null;
-            }
-
             if (empty) return;
-
-            List<String> warning = new ArrayList<>();
-
+            content.setTitle(dataItem.getTitle());
             content.getTags().clear();
-
-            LocalModFile modInfo = dataItem.getModInfo();
-            ModTranslations.Mod modTranslations = dataItem.getModTranslations();
-
-            ModLoaderType modLoaderType = modInfo.getModLoaderType();
-
-            dataItem.loadIcon(imageContainer, new WeakReference<>(this.itemProperty()));
-
-            String displayName = modInfo.getName();
-            if (modTranslations != null && I18n.isUseChinese()) {
-                String chineseName = modTranslations.getName();
-                if (StringUtils.containsChinese(chineseName)) {
-                    if (StringUtils.containsEmoji(chineseName)) {
-                        StringBuilder builder = new StringBuilder();
-
-                        chineseName.codePoints().forEach(ch -> {
-                            if (ch < 0x1F300 || ch > 0x1FAFF)
-                                builder.appendCodePoint(ch);
-                        });
-
-                        chineseName = builder.toString().trim();
-                    }
-
-                    if (StringUtils.isNotBlank(chineseName) && !displayName.equalsIgnoreCase(chineseName)) {
-                        displayName = displayName + " (" + chineseName + ")";
-                    }
-                }
+            switch (dataItem.getModInfo().getModLoaderType()) {
+                case FORGE:
+                    content.getTags().add(i18n("install.installer.forge"));
+                    break;
+                case CLEANROOM:
+                    content.getTags().add(i18n("install.installer.cleanroom"));
+                    break;
+                case NEO_FORGED:
+                    content.getTags().add(i18n("install.installer.neoforge"));
+                    break;
+                case FABRIC:
+                    content.getTags().add(i18n("install.installer.fabric"));
+                    break;
+                case LITE_LOADER:
+                    content.getTags().add(i18n("install.installer.liteloader"));
+                    break;
+                case QUILT:
+                    content.getTags().add(i18n("install.installer.quilt"));
+                    break;
             }
-            content.setTitle(displayName);
-
-            StringJoiner joiner = new StringJoiner(" | ");
-            if (modLoaderType != ModLoaderType.UNKNOWN && StringUtils.isNotBlank(modInfo.getId()))
-                joiner.add(modInfo.getId());
-
-            joiner.add(FileUtils.getName(modInfo.getFile()));
-
-            content.setSubtitle(joiner.toString());
-
-            if (modLoaderType == ModLoaderType.UNKNOWN) {
-                content.addTagWarning(i18n("mods.unknown"));
-            } else if (!ModListPageSkin.this.getSkinnable().supportedLoaders.contains(modLoaderType)) {
-                warning.add(i18n("mods.warning.loader_mismatch"));
-                switch (dataItem.getModInfo().getModLoaderType()) {
-                    case FORGE -> content.addTagWarning(i18n("install.installer.forge"));
-                    case LEGACY_FABRIC -> content.addTagWarning(i18n("install.installer.legacyfabric"));
-                    case CLEANROOM -> content.addTagWarning(i18n("install.installer.cleanroom"));
-                    case NEO_FORGE -> content.addTagWarning(i18n("install.installer.neoforge"));
-                    case FABRIC -> content.addTagWarning(i18n("install.installer.fabric"));
-                    case LITE_LOADER -> content.addTagWarning(i18n("install.installer.liteloader"));
-                    case QUILT -> content.addTagWarning(i18n("install.installer.quilt"));
-                }
+            if (dataItem.getMod() != null && I18n.isUseChinese()) {
+                content.getTags().add(dataItem.getMod().getDisplayName());
             }
-
-            String modVersion = modInfo.getVersion();
-            if (StringUtils.isNotBlank(modVersion) && !"${version}".equals(modVersion)) {
-                content.addTag(modVersion);
-            }
-
+            content.setSubtitle(dataItem.getSubtitle());
             if (booleanProperty != null) {
                 checkBox.selectedProperty().unbindBidirectional(booleanProperty);
             }
             checkBox.selectedProperty().bindBidirectional(booleanProperty = dataItem.active);
-            restoreButton.setVisible(!modInfo.getMod().getOldFiles().isEmpty());
+            restoreButton.setVisible(!dataItem.getModInfo().getMod().getOldFiles().isEmpty());
             restoreButton.setOnAction(e -> {
-                menu.get().getContent().setAll(modInfo.getMod().getOldFiles().stream()
+                menu.get().getContent().setAll(dataItem.getModInfo().getMod().getOldFiles().stream()
                         .map(localModFile -> new IconedMenuItem(null, localModFile.getVersion(),
-                                () -> getSkinnable().rollback(modInfo, localModFile),
+                                () -> getSkinnable().rollback(dataItem.getModInfo(), localModFile),
                                 popup.get()))
-                        .toList()
+                        .collect(Collectors.toList())
                 );
 
                 popup.get().show(restoreButton, JFXPopup.PopupVPosition.TOP, JFXPopup.PopupHPosition.RIGHT, 0, restoreButton.getHeight());
             });
-            revealButton.setOnAction(e -> FXUtils.showFileInExplorer(modInfo.getFile()));
+            revealButton.setOnAction(e -> FXUtils.showFileInExplorer(dataItem.getModInfo().getFile()));
             infoButton.setOnAction(e -> Controllers.dialog(new ModInfoDialog(dataItem)));
-
-            if (!warning.isEmpty()) {
-                pseudoClassStateChanged(WARNING, true);
-
-                //noinspection ConstantValue
-                this.warningTooltip = warning.size() == 1
-                        ? new Tooltip(warning.get(0))
-                        : new Tooltip(String.join("\n", warning));
-                FXUtils.installFastTooltip(this, warningTooltip);
-            }
         }
     }
 }
