@@ -19,13 +19,12 @@ package org.jackhuang.hmcl.mod;
 
 import javafx.beans.property.BooleanProperty;
 import javafx.beans.property.SimpleBooleanProperty;
-import org.jackhuang.hmcl.download.DownloadProvider;
 import org.jackhuang.hmcl.util.io.FileUtils;
 
 import java.io.IOException;
-import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
@@ -33,7 +32,7 @@ import static org.jackhuang.hmcl.util.logging.Logger.LOG;
  *
  * @author huangyuhui
  */
-public final class LocalModFile extends LocalAddonFile implements Comparable<LocalModFile> {
+public final class LocalModFile implements Comparable<LocalModFile> {
 
     private Path file;
     private final ModManager modManager;
@@ -53,7 +52,6 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
     }
 
     public LocalModFile(ModManager modManager, LocalMod mod, Path file, String name, Description description, String authors, String version, String gameVersion, String url, String logoPath) {
-        super();
         this.modManager = modManager;
         this.mod = mod;
         this.file = file;
@@ -83,7 +81,7 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
             }
         };
 
-        fileName = FileUtils.getNameWithoutExtension(LocalAddonManager.getLocalAddonName(file));
+        fileName = FileUtils.getNameWithoutExtension(ModManager.getModName(file));
 
         if (isOld()) {
             mod.getOldFiles().add(this);
@@ -100,7 +98,6 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
         return mod;
     }
 
-    @Override
     public Path getFile() {
         return file;
     }
@@ -153,7 +150,6 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
         activeProperty.set(active);
     }
 
-    @Override
     public String getFileName() {
         return fileName;
     }
@@ -162,7 +158,6 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
         return modManager.isOld(file);
     }
 
-    @Override
     public void setOld(boolean old) throws IOException {
         file = modManager.setOld(this, old);
 
@@ -175,40 +170,26 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
         }
     }
 
-    @Override
-    public boolean keepOldFiles() {
-        return true;
-    }
-
-    @Override
-    public void markDisabled() throws IOException {
+    public void disable() throws IOException {
         file = modManager.disableMod(file);
     }
 
-    @Override
-    public void delete() throws IOException {
-        Files.deleteIfExists(file);
-    }
-
-    @Override
-    public AddonUpdate checkUpdates(DownloadProvider downloadProvider, String gameVersion, RemoteMod.Type type) throws IOException {
-        RemoteModRepository repository = type.getRepoForType(RemoteModRepository.Type.MOD);
-        if (repository == null) return null;
-        Optional<RemoteMod.Version> currentVersion = repository.getRemoteVersionByLocalFile(file);
-        if (currentVersion.isEmpty()) return null;
-        List<RemoteMod.Version> remoteVersions = repository.getRemoteVersionsById(downloadProvider, currentVersion.get().getModid())
+    public ModUpdate checkUpdates(String gameVersion, RemoteModRepository repository) throws IOException {
+        Optional<RemoteMod.Version> currentVersion = repository.getRemoteVersionByLocalFile(this, file);
+        if (!currentVersion.isPresent()) return null;
+        List<RemoteMod.Version> remoteVersions = repository.getRemoteVersionsById(currentVersion.get().getModid())
                 .filter(version -> version.getGameVersions().contains(gameVersion))
                 .filter(version -> version.getLoaders().contains(getModLoaderType()))
                 .filter(version -> version.getDatePublished().compareTo(currentVersion.get().getDatePublished()) > 0)
                 .sorted(Comparator.comparing(RemoteMod.Version::getDatePublished).reversed())
-                .toList();
+                .collect(Collectors.toList());
         if (remoteVersions.isEmpty()) return null;
-        return new AddonUpdate(this, currentVersion.get(), remoteVersions.get(0), true);
+        return new ModUpdate(this, currentVersion.get(), remoteVersions);
     }
 
     @Override
     public int compareTo(LocalModFile o) {
-        return getFileName().compareToIgnoreCase(o.getFileName());
+        return getFileName().compareTo(o.getFileName());
     }
 
     @Override
@@ -219,5 +200,77 @@ public final class LocalModFile extends LocalAddonFile implements Comparable<Loc
     @Override
     public int hashCode() {
         return Objects.hash(getFileName());
+    }
+
+    public static class ModUpdate {
+        private final LocalModFile localModFile;
+        private final RemoteMod.Version currentVersion;
+        private final List<RemoteMod.Version> candidates;
+
+        public ModUpdate(LocalModFile localModFile, RemoteMod.Version currentVersion, List<RemoteMod.Version> candidates) {
+            this.localModFile = localModFile;
+            this.currentVersion = currentVersion;
+            this.candidates = candidates;
+        }
+
+        public LocalModFile getLocalMod() {
+            return localModFile;
+        }
+
+        public RemoteMod.Version getCurrentVersion() {
+            return currentVersion;
+        }
+
+        public List<RemoteMod.Version> getCandidates() {
+            return candidates;
+        }
+    }
+
+    public static class Description {
+        private final List<Part> parts;
+
+        public Description(String text) {
+            this.parts = new ArrayList<>();
+            this.parts.add(new Part(text, "black"));
+        }
+
+        public Description(List<Part> parts) {
+            this.parts = parts;
+        }
+
+        public List<Part> getParts() {
+            return parts;
+        }
+
+        @Override
+        public String toString() {
+            StringBuilder builder = new StringBuilder();
+            for (Part part : parts) {
+                builder.append(part.text);
+            }
+            return builder.toString();
+        }
+
+        public static class Part {
+            private final String text;
+            private final String color;
+
+            public Part(String text) {
+                this(text, "");
+            }
+
+            public Part(String text, String color) {
+                this.text = Objects.requireNonNull(text);
+                this.color = Objects.requireNonNull(color);
+            }
+
+            public String getText() {
+                return text;
+            }
+
+            public String getColor() {
+                return color;
+            }
+        }
     }
 }
