@@ -20,19 +20,20 @@ package org.jackhuang.hmcl.task;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public abstract class TaskExecutor {
     protected final Task<?> firstTask;
-    protected final List<TaskListener> taskListeners = new ArrayList<>(0);
-    protected volatile boolean cancelled = false;
+    protected final List<TaskListener> taskListeners = new ArrayList<>();
+    protected final AtomicInteger totTask = new AtomicInteger(0);
+    protected final AtomicBoolean cancelled = new AtomicBoolean(false);
     protected Exception exception;
-    private final List<Task.StagesHint> hints;
+    private final List<String> stages;
 
     public TaskExecutor(Task<?> task) {
         this.firstTask = task;
-        this.hints = task instanceof Task<?>.StagesHintTask hintTask
-                ? hintTask.getHints()
-                : List.of();
+        this.stages = task instanceof Task.StagesHintTask ? ((Task<?>.StagesHintTask) task).getStages() : Collections.emptyList();
     }
 
     public void addTaskListener(TaskListener taskListener) {
@@ -58,10 +59,14 @@ public abstract class TaskExecutor {
     public abstract void cancel();
 
     public boolean isCancelled() {
-        return cancelled;
+        return cancelled.get();
     }
 
-    public List<Task.StagesHint> getHints() {
-        return hints;
+    public int getTaskCount() {
+        return totTask.get();
+    }
+
+    public List<String> getStages() {
+        return stages;
     }
 }
