@@ -29,7 +29,6 @@ import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.time.Duration;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.TimeUnit;
@@ -76,23 +75,19 @@ public final class SystemUtils {
         return managedProcess.getProcess().waitFor();
     }
 
-    private static final Duration DEFAULT_MAX_WAIT_TIME = Duration.ofSeconds(15);
-
     public static String run(String... command) throws Exception {
-        return run(List.of(command), DEFAULT_MAX_WAIT_TIME);
-    }
-
-    public static String run(List<String> command, Duration maxWaitTime) throws Exception {
-        return run(command, inputStream -> IOUtils.readFullyAsString(inputStream, OperatingSystem.NATIVE_CHARSET), maxWaitTime);
+        return run(Arrays.asList(command),
+                inputStream -> IOUtils.readFullyAsString(inputStream, OperatingSystem.NATIVE_CHARSET));
     }
 
     public static <T> T run(List<String> command, ExceptionalFunction<InputStream, T, ?> convert) throws Exception {
-        return run(command, convert, DEFAULT_MAX_WAIT_TIME);
-    }
+        File nul = OperatingSystem.CURRENT_OS == OperatingSystem.WINDOWS
+                ? new File("NUL")
+                : new File("/dev/null");
 
-    public static <T> T run(List<String> command, ExceptionalFunction<InputStream, T, ?> convert, Duration maxWaitTime) throws Exception {
         Process process = new ProcessBuilder(command)
-                .redirectError(ProcessBuilder.Redirect.DISCARD)
+                .redirectInput(nul)
+                .redirectError(nul)
                 .start();
         try {
             InputStream inputStream = process.getInputStream();
@@ -100,7 +95,7 @@ public final class SystemUtils {
                     Lang.wrap(() -> convert.apply(inputStream)),
                     Schedulers.io());
 
-            if (!process.waitFor(maxWaitTime.toMillis(), TimeUnit.MILLISECONDS))
+            if (!process.waitFor(15, TimeUnit.SECONDS))
                 throw new TimeoutException();
 
             if (process.exitValue() != 0)
@@ -117,7 +112,7 @@ public final class SystemUtils {
         return Thread.currentThread().getContextClassLoader().getResource("com/sun/tools/attach/VirtualMachine.class") != null;
     }
 
-    public static void onLogLine(String log) {
+    private static void onLogLine(String log) {
         LOG.info(log);
     }
 }
